--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework 5 - Visit the Wikipedia hyperlinks graph!\n",
+    "# Visit the Wikipedia hyperlinks graph!\n",
     "In this assignment we perform an analysis of the Wikipedia Hyperlink graph. In particular, given extra information about the categories to which an article belongs to, we are curious to rank the articles according to some criteria. "
    ]
   },
